--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,18 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="{% url 'category:product-list' %}">{% shop_name %}</a>
-      <a class="navbar-text" href="{% url 'cart:detail' %}">Корзина</a>
+      <div class="text-light">
+        {% with total_items=cart|length %}
+          {% if cart|length > 0 %}
+            Корзина:
+            <a href="{% url "cart:detail" %}">
+              {{ total_items }} тов. {{ cart.get_total_price }} руб.
+            </a>
+          {% else %}
+            пустая
+          {% endif %}
+        {% endwith %}
+      </div>
     </div>
   </nav>
   <div class="container">
