--- a/templates/cart/index.html
+++ b/templates/cart/index.html
@@ -30,7 +30,14 @@
                   <td><img class="card-img-top" src="{% static 'img/no-photo.png' %}"></td>
                 {% endthumbnail %}
                 <td>{{ item.product.name }}</td>
-                <td>{{ item.quantity }}</td>
+                <td>
+                  <form action="{% url "cart:product-add" item.product.pk %}" method="post" class="form-inline">
+                    {{ item.update_quantity_form.quantity }}
+                    {{ item.update_quantity_form.update }}
+                    {% csrf_token %}
+                    <input type="submit" class="btn btn-primary ml-1" value="Обновить">
+                  </form>
+                </td>
                 <td>{{ item.price }} руб.</td>
                 <td>{{ item.total_price }} руб.</td>
                 <td><a href="{% url "cart:product-delete" item.product.id %}">Удалить</a></td>
